--- a/website/style.css
+++ b/website/style.css
@@ -2,15 +2,16 @@
 p {
     font-family: 'Open Sans', sans-serif;
     margin-top: 1rem;
-	color: white;
+	color: rgb(0, 0, 0);
 }
 
 body {
-	background-color: #0b0517;
+	background-color: #ffffff;
 }
 
 #heading {
     font-size: 32px;
+	margin-bottom: 1rem;
 }
 
 .center-content {
@@ -27,7 +28,10 @@ div {
 	left: 0;
 	bottom: 0;
 	width: 100%;
-	background-color: rgb(0, 0, 0);
+	background-color: rgb(0, 1, 22);
 	color: white;
 	text-align: center;
+}
+a {
+	color:#77efff;
 }
