slight ui changes

--- a/website/style.css
+++ b/website/style.css
@@ -14,6 +14,12 @@ body {
 	margin-bottom: 1rem;
 }
 
+#header {
+	padding-left: 5rem;
+	padding-right: 5rem;
+	text-align: center;
+}
+
 .center-content {
     display: grid;
     place-content: center;
